# hackersearch

./: .gitignore  README.md  compose.yaml
.claude/: launch.json
docs/: indexing.mdx  introduction.mdx  mint.json  searching.mdx
indexer/: Cargo.toml  Dockerfile  Dockerfile.dev  fly.toml
indexer/src/: enrich.rs  hn.rs  main.rs  meili.rs
web/: Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
web/src/app/: facet-rail.tsx  globals.css  highlighted.tsx  hit-card.tsx  icon.tsx  layout.tsx  page.tsx  results.tsx  search-app.tsx
web/src/hooks/: use-hn-search.ts
web/src/lib/: autocomplete.ts  meili.ts  search-state.ts
